Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>g-v by g-v</title>
+    <title>Home by g-v</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>g-v</h1>
+        <h1>Home</h1>
         <h2></h2>
         <a href="https://github.com/g-v" class="button"><small>Follow me on</small> GitHub</a>
       </div>
